Process Hacker

2.11
 * NEW/IMPROVED:
   * Added WS Watch and other features to ExtendedTools 
     plugin
 * FIXED:
   * Always on Top issues

2.10
 * NEW/IMPROVED:
   * KProcessHacker is now signed, so it works on 64-bit 
     systems. Thank you to the ReactOS Foundation.
   * Added Run As Limited User
   * Added CPU, private bytes and I/O history columns
   * Added font selection
   * Slightly improved highlighting configuration
 * FIXED:
   * High DPI support
   * Multi-monitor support in graph tooltips
   * DEP status retrieval
   * ExtendedTools plugin crash
   * Notification icon menu crash
   * Memory leaks
   * Other small bug fixes

2.9
 * NEW/IMPROVED:
   * Added column selection for modules list
   * Added wait analysis for 64-bit systems
   * Added signature verification for modules
   * Added ExtendedTools plugin (Vista and above only) 
     with Disk and Network information
   * Updated ExtendedNotifications plugin: added ability 
     to log events to a file
   * Updated ExtendedServices plugin: new tab on Vista 
     and above
   * Updated ToolStatus plugin: resolves ghost windows 
     to hung windows
   * Environment variables and current directory are 
     now correctly shown for WOW64 processes
   * I/O priority names are now used instead of numbers
 * FIXED:
   * Network list bug
   * Memory leaks

2.8
 * NEW/IMPROVED:
   * Better service list (including column selection)
   * Added Peak Handles
   * Process tree sorting is now preserved
   * Save works for services and network connections
   * Pausing now works correctly with the Network tab
   * Added option to display inclusive CPU usages for 
     collapsed processes
   * Added CLR tab to peview
   * Added ability to destroy heaps
   * Improved process tree list appearance
   * Certain command line parameters are now propagated
 * FIXED:
   * Icon handling bugs
   * Memory leaks
   * Extended tooltips for WOW64 processes

2.7
 * NEW/IMPROVED: